--- a/style.css
+++ b/style.css
@@ -5,338 +5,338 @@
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 *:focus {
-    outline: none !important;
+	outline: none !important;
 }
 
 html,
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-        "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 0px;
-    letter-spacing: 0px;
-    word-spacing: 0px;
-    color: white;
-    background: white;
-    height: 100%;
-    width: 100%;
-    overflow-x: hidden;
-    vertical-align: baseline;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
+	font-size: 0px;
+	letter-spacing: 0px;
+	word-spacing: 0px;
+	color: white;
+	background: white;
+	height: 100%;
+	width: 100%;
+	overflow-x: hidden;
+	vertical-align: baseline;
 }
 /*#endregion*/
 
 /*#region Menu*/
 header {
-    font-family: HindLight, sans-serif;
-    width: 100%;
-    height: 75px;
-    margin: auto;
-    position: absolute;
-    display: flex;
-    top: 25px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
+	font-family: HindLight, sans-serif;
+	width: 100%;
+	height: 75px;
+	margin: auto;
+	position: absolute;
+	display: flex;
+	top: 25px;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 9999;
 }
 
 nav {
-    display: flex;
-    width: calc(100vw - 2 * 15px);
-    margin: auto;
-    height: 100%;
+	display: flex;
+	width: calc(100vw - 2 * 15px);
+	margin: auto;
+	height: 100%;
 }
 
 header .logo-container {
-    margin: auto auto auto 0;
-    z-index: 9999;
+	margin: auto auto auto 0;
+	z-index: 9999;
 }
 
 header .logo-container h1 {
-    font-size: 24px;
-    color: white;
+	font-size: 24px;
+	color: white;
 }
 
 .nav-links {
-    position: absolute;
-    right: 0;
-    left: 0;
-    height: 100vh;
-    top: 12.5px;
-    background: rgba(0, 0, 0, 0.95);
-    display: block;
-    text-align: center;
-    align-items: center;
-    width: 100%;
-    transform: translateY(-100%);
-    transition: transform 0.25s ease-in;
-    backdrop-filter: brightness(50%) blur(2.5px);
-    padding-top: 75px;
-    font-size: 24px;
+	position: absolute;
+	right: 0;
+	left: 0;
+	height: 100vh;
+	top: 12.5px;
+	background: rgba(0, 0, 0, 0.95);
+	display: block;
+	text-align: center;
+	align-items: center;
+	width: 100%;
+	transform: translateY(-100%);
+	transition: transform 0.25s ease-in;
+	backdrop-filter: brightness(50%) blur(2.5px);
+	padding-top: 75px;
+	font-size: 24px;
 }
 
 .nav-links li {
-    opacity: 0;
-    margin: 50px 0;
+	opacity: 0;
+	margin: 50px 0;
 }
 
 .nav-links a {
-    color: white;
-    text-decoration: none;
-    letter-spacing: 1.5px;
-    transition: 0.25s;
+	color: white;
+	text-decoration: none;
+	letter-spacing: 1.5px;
+	transition: 0.25s;
 }
 
 .nav-links li:hover a {
-    color: gray;
+	color: gray;
 }
 
 .nav-active {
-    transform: translateY(0%);
+	transform: translateY(0%);
 }
 
 .burger {
-    display: inline-block;
-    flex: 1;
-    margin-right: 10px;
-    cursor: pointer;
-    clear: right;
-    position: absolute;
-    top: 25px;
-    right: 0;
+	display: inline-block;
+	flex: 1;
+	margin-right: 10px;
+	cursor: pointer;
+	clear: right;
+	position: absolute;
+	top: 25px;
+	right: 0;
 }
 
 .burger div {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    transition: all 0.25s ease;
+	width: 25px;
+	height: 3px;
+	background-color: white;
+	transition: all 0.25s ease;
 }
 
 .line2 {
-    margin: 5px 0;
+	margin: 5px 0;
 }
 
 .overlay {
-    position: absolute;
-    filter: blur(8px);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+	position: absolute;
+	filter: blur(8px);
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
 
 .toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
+	transform: rotate(-45deg) translate(-5px, 6px);
 }
 
 .toggle .line2 {
-    opacity: 0;
+	opacity: 0;
 }
 
 .toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
+	transform: rotate(45deg) translate(-5px, -6px);
 }
 
 @keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateY(-25px);
-    }
+	from {
+		opacity: 0;
+		transform: translateY(-25px);
+	}
 
-    to {
-        opacity: 1;
-        transform: translateY(0px);
-    }
+	to {
+		opacity: 1;
+		transform: translateY(0px);
+	}
 }
 /*#endregion*/
 
 /*#region Home Page Banner*/
 .home-page-banner {
-    width: 100%;
-    height: 100vh;
-    position: relative;
+	width: 100%;
+	height: 100vh;
+	position: relative;
 }
 
 .home-page-banner img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin: 0px;
-    padding: 0px;
-    filter: brightness(75%);
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	margin: 0px;
+	padding: 0px;
+	filter: brightness(75%);
 }
 
 .home-page-banner-content {
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    height: 500px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	text-align: center;
+	position: absolute;
+	width: 100%;
+	height: 500px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .home-page-banner-content .small-text h1 {
-    font-size: 50px;
-    display: block;
-    font-family: HindSemiBold;
+	font-size: 50px;
+	display: block;
+	font-family: HindSemiBold;
 }
 
 .home-page-banner-content .large-text h1 {
-    font-size: 50px;
-    font-family: HindSemiBold;
-    display: none;
+	font-size: 50px;
+	font-family: HindSemiBold;
+	display: none;
 }
 
 .home-page-banner-content .sub-title p {
-    display: block;
-    font-size: 20px;
-    font-family: HindLight;
-    margin-top: 25px;
+	display: block;
+	font-size: 20px;
+	font-family: HindLight;
+	margin-top: 25px;
 }
 
 .home-page-banner-button {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .home-page-banner-button button {
-    width: 250px;
-    height: 100px;
-    font-size: 36px;
-    font-family: HindSemiBold;
-    position: absolute;
-    top: 350px;
-    border: 5px solid white;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    transition: 0.25s;
+	width: 250px;
+	height: 100px;
+	font-size: 36px;
+	font-family: HindSemiBold;
+	position: absolute;
+	top: 350px;
+	border: 5px solid white;
+	background-color: white;
+	color: black;
+	cursor: pointer;
+	transition: 0.25s;
 }
 
 .home-page-banner-button:hover button {
-    background-color: transparent;
-    color: White;
+	background-color: transparent;
+	color: White;
 }
 /*#endregion*/
 
 /*#region Page Content*/
 .main-content-container {
-    height: 1175px;
-    position: relative;
+	height: 1175px;
+	position: relative;
 }
 
 .main-content-container .main-content {
-    margin: 0 15px;
-    padding-top: 15px;
+	margin: 0 15px;
+	padding-top: 15px;
 }
 
 #learn h1,
 #web-design h1 {
-    font-family: HindLight;
-    text-align: left;
-    font-size: 20px;
-    letter-spacing: 1px;
-    width: 100%;
+	font-family: HindLight;
+	text-align: left;
+	font-size: 20px;
+	letter-spacing: 1px;
+	width: 100%;
 }
 
 #learn h2,
 #web-design h2 {
-    font-family: HindBold;
-    text-align: left;
-    font-size: 20px;
-    letter-spacing: 1px;
-    width: 100%;
+	font-family: HindBold;
+	text-align: left;
+	font-size: 20px;
+	letter-spacing: 1px;
+	width: 100%;
 }
 
 #learn p,
 #web-design p {
-    font-family: HindRegular;
-    text-align: left;
-    font-size: 16px;
-    margin-top: 50px;
-    width: 75%;
+	font-family: HindRegular;
+	text-align: left;
+	font-size: 16px;
+	margin-top: 50px;
+	width: 75%;
 }
 
 #learn {
-    background-color: black;
+	background-color: black;
 }
 
 #learn h1,
 #learn h2,
 #learn p {
-    color: white;
+	color: white;
 }
 
 #web-design {
-    background-color: white;
+	background-color: white;
 }
 
 #web-design h1,
 #web-design h2,
 #web-design p {
-    color: black;
+	color: black;
 }
 
 .main-content-button {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .main-content-container .main-content-button button {
-    width: 225px;
-    height: 75px;
-    top: 325px;
-    font-size: 24px;
-    border: none;
-    font-family: HindRegular;
-    margin: 0 auto;
-    position: absolute;
-    transition: 0.25s;
-    cursor: pointer;
+	width: 225px;
+	height: 75px;
+	top: 325px;
+	font-size: 24px;
+	border: none;
+	font-family: HindRegular;
+	margin: 0 auto;
+	position: absolute;
+	transition: 0.25s;
+	cursor: pointer;
 }
 
 #learn button {
-    border: 2.5px solid white;
-    background-color: white;
-    color: black;
+	border: 2.5px solid white;
+	background-color: white;
+	color: black;
 }
 
 #learn .main-content-button:hover button {
-    background-color: transparent;
-    color: white;
+	background-color: transparent;
+	color: white;
 }
 
 #web-design button {
-    border: 2.5px solid black;
-    background-color: black;
-    color: white;
+	border: 2.5px solid black;
+	background-color: black;
+	color: white;
 }
 
 #web-design .main-content-button:hover button {
-    background-color: transparent;
-    color: black;
+	background-color: transparent;
+	color: black;
 }
 
 .main-content-container .main-content-image {
-    bottom: 0;
-    position: absolute;
+	bottom: 0;
+	position: absolute;
 }
 
 .main-content-container .main-content-image {
-    height: 750px;
-    width: 100%;
+	height: 750px;
+	width: 100%;
 }
 
 .main-content-container .main-content-image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
 }
 /*#endregion*/
 
@@ -350,213 +350,220 @@ header .logo-container h1 {
 /*#region Small Devices*/
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    nav {
-        width: calc(100vw - 2 * 75px);
-    }
+	nav {
+		width: calc(100vw - 2 * 75px);
+	}
 
-    .burger {
-        right: 60px;
-    }
+	.burger {
+		right: 60px;
+	}
 
-    .main-content-container {
-        height: 1375px;
-    }
+	.main-content-container {
+		height: 1375px;
+	}
 
-    .main-content-container .main-content {
-        margin: 0 75px;
-        padding-top: 25px;
-    }
+	.main-content-container .main-content {
+		margin: 0 75px;
+		padding-top: 25px;
+	}
 
-    #learn h1,
-    #learn h2,
-    #web-design h1,
-    #web-design h2 {
-        font-size: 24px;
-    }
+	#learn h1,
+	#learn h2,
+	#web-design h1,
+	#web-design h2 {
+		font-size: 24px;
+	}
 
-    #learn p,
-    #web-design p {
-        font-size: 20px;
-    }
+	#learn p,
+	#web-design p {
+		font-size: 20px;
+	}
 
-    .main-content-container .main-content-button button {
-        width: 250px;
-        height: 100px;
-        top: 450px;
-        font-size: 28px;
-    }
+	.main-content-container .main-content-button button {
+		width: 250px;
+		height: 100px;
+		top: 450px;
+		font-size: 28px;
+	}
 
-    .main-content-container .main-content-image {
-        height: 800px;
-    }
+	.main-content-container .main-content-image {
+		height: 800px;
+	}
 }
 /*#endregion*/
 
 /*#region Medium Devices*/
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    nav {
-        width: calc(100vw - 2 * 15%);
-    }
+	nav {
+		width: calc(100vw - 2 * 15%);
+	}
 
-    nav .nav-links {
-        display: flex;
-        justify-content: flex-end;
-        position: relative;
-        font-size: 18px;
-        width: 75%;
-        height: 100%;
-        list-style: none;
-        letter-spacing: 1.25px;
-        background: none;
-        backdrop-filter: none;
-        transform: translateX(0%);
-        padding: 0;
-        margin: 0;
-        top: 0;
-    }
+	nav .nav-links {
+		display: flex;
+		justify-content: flex-end;
+		position: relative;
+		font-size: 18px;
+		width: 75%;
+		height: 100%;
+		list-style: none;
+		letter-spacing: 1.25px;
+		background: none;
+		backdrop-filter: none;
+		transform: translateX(0%);
+		padding: 0;
+		margin: 0;
+		top: 0;
+	}
 
-    .nav-links li {
-        list-style: none;
-        margin: auto 0 auto 20px;
-        opacity: 1;
-    }
+	.nav-links li {
+		list-style: none;
+		margin: auto 0 auto 20px;
+		opacity: 1;
+	}
 
-    .burger {
-        display: none;
-    }
+	.burger {
+		display: none;
+	}
 
-    .home-page-banner-content {
-        padding: 0 15%;
-    }
+	.home-page-banner-content {
+		padding: 0 15%;
+	}
 
-    .home-page-banner-content .small-text h1 {
-        display: none;
-    }
+	.home-page-banner-content .small-text h1 {
+		display: none;
+	}
 
-    .home-page-banner-content .large-text h1 {
-        display: block;
-    }
+	.home-page-banner-content .large-text h1 {
+		display: block;
+	}
 
-    .home-page-banner-content .sub-title p {
-        font-size: 24px;
-    }
+	.home-page-banner-content .sub-title p {
+		font-size: 24px;
+	}
 
-    .home-page-banner-button button {
-        width: 300px;
-        height: 125px;
-        font-size: 42px;
-    }
+	.home-page-banner-button button {
+		width: 300px;
+		height: 125px;
+		font-size: 42px;
+	}
 
-    .main-content-container {
-        height: 625px;
-    }
+	.main-content-container {
+		height: 625px;
+	}
 
-    .main-content-container .main-content {
-        margin: 0 15%;
-        padding-top: 0px;
-    }
+	.main-content-container .main-content {
+		margin: 0 15%;
+		padding-top: 0px;
+	}
 
-    .main-content-container .main-content-button {
-        position: absolute;
-        display: block;
-        bottom: 625px;
-    }
+	.main-content-container .main-content-button {
+		position: absolute;
+		display: block;
+		bottom: 625px;
+	}
 
-    .main-content-container .main-content-button button {
-        width: 275px;
-        height: 100px;
-        bottom: 750px;
-        font-size: 30px;
-    }
+	.main-content-container .main-content-button button {
+		width: 275px;
+		height: 100px;
+		bottom: 750px;
+		font-size: 30px;
+	}
 
-    .main-content-container .main-content-header {
-        display: block;
-        padding-top: 37.5px;
-        width: 75%;
-        background-color: blue;
-    }
+	.main-content-container .main-content-text {
+		display: block;
+		padding-top: 37.5px;
+		width: 75%;
+	}
 
-    #learn h1,
-    #learn h2,
-    #web-design h1,
-    #web-design h2 {
-        font-size: 26px;
-        width: 100%;
-    }
+	#learn h1,
+	#learn h2,
+	#web-design h1,
+	#web-design h2 {
+		font-size: 26px;
+		width: 100%;
+	}
 
-    #learn .main-content p,
-    #learn .main-content-header,
-    #learn .main-content-header * {
-        text-align: left;
-        float: left;
-    }
+	#learn p,
+	#web-design p {
+		width: 100%;
+	}
 
-    #learn .main-content-button {
-        left: 0;
-        margin-left: 15%;
-        z-index: 9999;
-    }
+	#learn .main-content p,
+	#learn .main-content-text,
+	#learn .main-content-text * {
+		text-align: left;
+		float: left;
+	}
 
-    #learn .main-content-image {
-        float: right;
-    }
+	.main-content-text {
+		overflow: hidden;
+	}
 
-    #learn .main-content-image {
-        float: right;
-    }
+	#learn .main-content-button {
+		left: 0;
+		margin-left: 15%;
+		z-index: 9999;
+	}
 
-    #learn .main-content-image,
-    #web-design .main-content-image {
-        position: relative;
-        width: 187.5px;
-        height: 100%;
-        vertical-align: top;
-        z-index: 9999;
-        filter: brightness(125%);
-    }
+	#learn .main-content-image,
+	#web-design .main-content-image {
+		position: relative;
+		width: 175px;
+		height: 100%;
+		z-index: 9999;
+	}
 
-    #web-design .main-content p,
-    #web-design .main-content-header,
-    #web-design .main-content-header * {
-        text-align: right;
-        float: right;
-    }
+	#learn .main-content-image {
+		float: right;
+	}
 
-    #web-design .main-content-button {
-        right: 275px;
-        margin-right: 15%;
-    }
+	#web-design .main-content p,
+	#web-design .main-content-text,
+	#web-design .main-content-text * {
+		text-align: right;
+		float: right;
+	}
 
-    #web-design .main-content-image {
-        float: left;
-    }
+	#web-design .main-content-button {
+		right: 275px;
+		margin-right: 15%;
+	}
+
+	#web-design .main-content-image {
+		float: left;
+	}
 }
 /*#endregion*/
 
 /*#region Large Devices*/
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    nav {
-        width: calc(100vw - 2 * 25%);
-    }
+	nav {
+		width: calc(100vw - 2 * 25%);
+	}
 
-    .home-page-banner-content .large-text h1 {
-        font-size: 60px;
-    }
+	.home-page-banner-content .large-text h1 {
+		font-size: 60px;
+	}
 
-    .main-content-container .main-content {
-        margin: 0 25%;
-    }
+	.main-content-container .main-content {
+		margin: 0 25%;
+	}
 
-    #learn .main-content-button {
-        left: 0;
-        margin-left: 25%;
-    }
+	#learn .main-content-button {
+		left: 0;
+		margin-left: 25%;
+	}
 
-    #web-design .main-content-button {
-        margin-right: 25%;
-    }
+	#web-design .main-content-button {
+		margin-right: 25%;
+	}
+
+	#learn .main-content-image,
+	#web-design .main-content-image {
+		width: 275px;
+	}
 }
 /*#endregion*/
 
@@ -567,36 +574,36 @@ header .logo-container h1 {
 /*#endregion*/
 
 @media only screen and (max-height: 600px) {
-    .home-page-banner {
-        height: 600px;
-    }
+	.home-page-banner {
+		height: 600px;
+	}
 
-    @media only screen and (max-width: 768px) {
-        .nav-links {
-            height: 600px;
-        }
-    }
+	@media only screen and (max-width: 768px) {
+		.nav-links {
+			height: 600px;
+		}
+	}
 }
 /*#endregion*/
 
 /*#region Fonts */
 @font-face {
-    font-family: HindLight;
-    src: url("/fonts/Hind-Light.ttf");
+	font-family: HindLight;
+	src: url("/fonts/Hind-Light.ttf");
 }
 
 @font-face {
-    font-family: HindRegular;
-    src: url("/fonts/Hind-Regular.ttf");
+	font-family: HindRegular;
+	src: url("/fonts/Hind-Regular.ttf");
 }
 
 @font-face {
-    font-family: HindBold;
-    src: url("/fonts/Hind-Bold.ttf");
+	font-family: HindBold;
+	src: url("/fonts/Hind-Bold.ttf");
 }
 
 @font-face {
-    font-family: HindSemiBold;
-    src: url("/fonts/Hind-SemiBold.ttf");
+	font-family: HindSemiBold;
+	src: url("/fonts/Hind-SemiBold.ttf");
 }
 /*#endregion*/
