--- a/style.css
+++ b/style.css
@@ -363,14 +363,36 @@ header .logo-container h1 {
 
 .project {
     width: 100%;
-    height: 375px;
-    margin: 0 auto 15px auto;
+    height: 437.5px;
+    background-color: black;
+    transition: 0.25s;
+    position: relative;
 }
 
 .project img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: 0.25s;
+}
+
+.project-header {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.project h1 {
+    font-size: 28px;
+    color: black;
+}
+
+#project-2 {
+    margin: 15px 0;
+}
+
+.project:hover img {
+    opacity: 0.125;
 }
 /*#endregion*/
 
@@ -567,6 +589,21 @@ header .logo-container h1 {
 
     #web-design .main-content-image {
         float: left;
+    }
+
+    #projects {
+        display: flex;
+        margin: 15px 15% 0 15%;
+    }
+
+    .project {
+        width: 100%;
+        margin: 0;
+        height: 250px;
+    }
+
+    #project-2 {
+        margin: 0 15px;
     }
 }
 /*#endregion*/
