--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ header .logo-container h1 {
 
 .project {
     width: 100%;
-    height: 437.5px;
+    height: 375px;
     background-color: black;
     transition: 0.25s;
     position: relative;
@@ -373,39 +373,56 @@ header .logo-container h1 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: 0.25s;
 }
 
 .project .project-header {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 75px;
     width: 100%;
+    background-color: rgba(0, 0, 0, 0.875);
+    transition: 0.25s;
 }
 
 .project .project-header h3 {
-    font-size: 32.5px;
+    font-size: 37.5px;
     font-family: HindSemiBold;
-    color: black;
+    color: white;
     text-align: left;
-    width: 75%;
+    width: 100%;
+    height: 100%;
     letter-spacing: 1px;
     line-height: 1.25;
-    margin: 15px 0 0 15px;
-    transition: 0.25s;
+    padding: 0 25% 0 15px;
+    vertical-align: middle;
+    line-height: 75px;
+}
+
+.project .project-information {
+    position: absolute;
+    top: 75px;
+    left: 0;
+    opacity: 0;
+}
+
+.project .project-information p {
+    font-size: 20px;
+    font-family: HindRegular;
+    color: white;
+    padding: 30px 25% 0 15px;
 }
 
 #project-2 {
     margin: 15px 0;
 }
 
-.project:hover img {
-    opacity: 0.125;
+.project:hover .project-header {
+    height: 100%;
 }
 
-.project:hover h3 {
-    color: white;
+.project:hover .project-information {
+    opacity: 100%;
 }
 /*#endregion*/
 
@@ -457,6 +474,16 @@ header .logo-container h1 {
 
     .main-content-container .main-content-image {
         height: 800px;
+    }
+
+    .project .project-header h3 {
+        font-size: 30px;
+        padding: 0 12.5% 0 75px;
+    }
+
+    .project .project-information p {
+        font-size: 24px;
+        padding: 30px 25% 0 75px;
     }
 }
 /*#endregion*/
@@ -606,7 +633,11 @@ header .logo-container h1 {
 
     #projects {
         display: flex;
-        margin: 15px 15% 0 15%;
+        margin: 15px 7.5% 0 7.5%;
+    }
+
+    #project-2 {
+        margin: 0 15px;
     }
 
     .project {
@@ -615,8 +646,23 @@ header .logo-container h1 {
         height: 250px;
     }
 
-    #project-2 {
-        margin: 0 15px;
+    .project .project-header {
+        height: 50px;
+    }
+
+    .project .project-header h3 {
+        font-size: 22.5px;
+        padding: 0 6.25% 0 15px;
+        line-height: 50px;
+    }
+
+    .project .project-information {
+        top: 50px;
+    }
+
+    .project .project-information p {
+        font-size: 16px;
+        padding: 0 25% 0 15px;
     }
 }
 /*#endregion*/
@@ -648,6 +694,18 @@ header .logo-container h1 {
     #learn .main-content-image,
     #web-design .main-content-image {
         width: 275px;
+    }
+
+    #projects {
+        margin: 15px 12.5% 0 12.5%;
+    }
+
+    .project .project-header h3 {
+        font-size: 25px;
+    }
+
+    .project .project-information p {
+        font-size: 16px;
     }
 }
 /*#endregion*/
