--- a/style.css
+++ b/style.css
@@ -450,49 +450,74 @@ header .logo-container h1 {
 /*#region Footer*/
 footer {
 	background-color: black;
-	height: 250px;
+	height: 275px;
 	padding: 30px 0 0 0;
+	font-family: HindLight, sans-serif;
+	position: relative;
 }
 
-.footer-nav-links {
+.footer-button {
 	display: flex;
-	flex: 1;
-	text-align: center;
-	width: 100%;
-	font-size: 16px;
+	justify-content: center;
+}
+
+footer .footer-button button {
+	height: 75px;
+	width: 175px;
+	top: 30px;
+	position: absolute;
+	border: solid 2.5px white;
+	background-color: white;
+	color: black;
+	font-size: 32px;
+	font-family: HindRegular, sans-serif;
+	transition: 0.25s;
+	cursor: pointer;
+}
+
+.footer-button:hover button {
+	background-color: transparent;
+	color: white;
+}
+
+footer .footer-nav-links {
+	display: flex;
+	font-size: 18px;
+	list-style: none;
+	letter-spacing: 1.25px;
+	justify-content: center;
 	align-items: center;
-	background-color: red;
+	margin-top: 105px;
 }
 
 .footer-nav-links li {
 	list-style: none;
-	text-align: center;
 }
 
 .footer-nav-links a {
 	color: white;
-	font-family: HindRegular, sans-serif;
 	text-decoration: none;
-	letter-spacing: 1px;
+	letter-spacing: 1.5px;
 	transition: 0.25s;
-	line-height: 37.5px;
-	text-align: center;
 }
 
 .footer-nav-links-divider {
+	height: 18px;
 	width: 1px;
-	height: 16px;
-	margin: 0 12.5px;
 	background-color: white;
+	margin: 0 12.5px;
 }
 
-.footer-sub-nav-links {
-	font-size: 18px;
+.social-links {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 30px;
 }
 
-.footer-sub-nav-links a {
-	font-family: HindLight, sans-serif;
-	line-height: 25px;
+.social-links img {
+	height: 50px;
+	margin: 0 15px;
 }
 /*#endregion*/
 
@@ -554,10 +579,6 @@ footer {
 	.project .project-information p {
 		font-size: 22px;
 		padding: 30px 12.5% 0 75px;
-	}
-
-	footer {
-		padding: 30px 0 0 75px;
 	}
 }
 /*#endregion*/
@@ -744,10 +765,6 @@ footer {
 		height: 100%;
 		width: 100%;
 	}
-
-	footer {
-		padding: 30px 0 0 15%;
-	}
 }
 /*#endregion*/
 
@@ -801,10 +818,6 @@ footer {
 	#project-highlights-button button {
 		height: 100%;
 		width: 100%;
-	}
-
-	footer {
-		padding: 30px 0 0 25%;
 	}
 }
 /*#endregion*/
