--- a/style.css
+++ b/style.css
@@ -38,10 +38,15 @@ header {
 	margin: auto;
 	position: absolute;
 	display: flex;
-	top: 25px;
+	top: 37.5px;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	z-index: 9999;
+}
+
+.header-background {
+	background-color: black;
+	width: 100%;
 }
 
 nav {
@@ -66,7 +71,7 @@ header .logo-container h1 {
 	right: 0;
 	left: 0;
 	height: 100vh;
-	top: 12.5px;
+	top: 0px;
 	background: rgba(0, 0, 0, 0.95);
 	display: block;
 	text-align: center;
@@ -89,6 +94,7 @@ header .logo-container h1 {
 	text-decoration: none;
 	letter-spacing: 1.5px;
 	transition: 0.25s;
+	line-height: 75px;
 }
 
 .nav-links li:hover a {
@@ -226,7 +232,52 @@ header .logo-container h1 {
 }
 /*#endregion*/
 
-/*#region Page Content*/
+/*#region Page Banner*/
+.page-banner {
+	width: 100%;
+	height: 375px;
+	margin-top: 75px;
+	position: relative;
+}
+
+.page-banner img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter: brightness(75%);
+	margin: 0px;
+	padding: 0px;
+}
+
+.page-banner-content {
+	text-align: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.page-banner-content .small-text {
+	margin: 137.5px 0;
+	line-height: 50px;
+}
+
+.page-banner-content .small-text h1 {
+	font-size: 50px;
+	display: block;
+	font-family: HindSemiBold, sans-serif;
+}
+
+.page-banner-content .large-text h1 {
+	font-size: 50px;
+	font-family: HindSemiBold, sans-serif;
+	display: none;
+}
+/*#endregion*/
+
+/*#region Main Page Content*/
 .main-content-container {
 	height: 1375px;
 	position: relative;
@@ -338,6 +389,35 @@ header .logo-container h1 {
 	height: 100%;
 	width: 100%;
 	object-fit: cover;
+}
+/*#endregion*/
+
+/*#region Main Page Content*/
+.content-container {
+	height: 1375px;
+	position: relative;
+	color: black;
+}
+
+.content-container .content {
+	margin: 0 15px;
+	padding-top: 15px;
+}
+
+.content-text h1 {
+	font-family: HindLight, sans-serif;
+	text-align: left;
+	font-size: 27.5px;
+	letter-spacing: 1px;
+	width: 100%;
+}
+
+.content-text p {
+	font-family: HindRegular, sans-serif;
+	text-align: left;
+	font-size: 20px;
+	margin-top: 50px;
+	width: 75%;
 }
 /*#endregion*/
 
@@ -504,6 +584,10 @@ footer .footer-nav-links {
 	list-style: none;
 }
 
+.footer-nav-links li:hover a {
+	color: gray;
+}
+
 .footer-nav-links a {
 	color: white;
 	text-decoration: none;
@@ -528,6 +612,11 @@ footer .footer-nav-links {
 .social-links img {
 	height: 50px;
 	margin: 0 15px;
+	transition: 0.25s;
+}
+
+.social-links img:hover {
+	opacity: 50%;
 }
 
 footer .copyright {
