--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ header .logo-container h1 {
 	filter: brightness(75%);
 	margin: 0px;
 	padding: 0px;
+	transform: scale(1.1);
 }
 
 .page-banner-content {
@@ -261,6 +262,7 @@ header .logo-container h1 {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	backdrop-filter: blur(2px);
 }
 
 .page-banner-content .small-text {
@@ -271,7 +273,7 @@ header .logo-container h1 {
 .page-banner-content .small-text h1 {
 	font-size: 50px;
 	display: block;
-	font-family: HindSemiBold, sans-serif;
+	font-family: HindRegular, sans-serif;
 }
 
 .page-banner-content .large-text h1 {
@@ -408,7 +410,7 @@ header .logo-container h1 {
 }
 
 .content-header {
-	background-color: black;
+	background-color: white;
 }
 
 .content-header h1 {
@@ -419,8 +421,15 @@ header .logo-container h1 {
 	width: 100%;
 	height: 75px;
 	line-height: 75px;
-	color: white;
+	color: black;
 	padding: 0 15px;
+}
+
+.content-header-border {
+	width: 200px;
+	height: 1px;
+	margin-left: 15px;
+	background-color: black;
 }
 
 .content-text p {
