--- a/style.css
+++ b/style.css
@@ -399,14 +399,9 @@ header .logo-container h1 {
 /*#endregion*/
 
 /*#region Page Content*/
-.content-container {
-	height: 500px;
-	position: relative;
-}
-
-.content-container .content-text {
+.content-container .content {
 	margin: 0 15px;
-	padding-top: 15px;
+	padding-top: 30px;
 }
 
 .content-header {
@@ -416,19 +411,16 @@ header .logo-container h1 {
 .content-header h1 {
 	font-family: HindSemiBold, sans-serif;
 	text-align: left;
-	font-size: 27.5px;
+	font-size: 30px;
 	letter-spacing: 1px;
 	width: 100%;
-	height: 75px;
-	line-height: 75px;
+	line-height: 50px;
 	color: black;
-	padding: 0 15px;
 }
 
 .content-header-border {
 	width: 200px;
-	height: 1px;
-	margin-left: 15px;
+	height: 1.5px;
 	background-color: black;
 }
 
@@ -436,7 +428,20 @@ header .logo-container h1 {
 	font-family: HindRegular, sans-serif;
 	text-align: left;
 	font-size: 20px;
-	margin-top: 25px;
+	margin: 25px 0;
+	width: 75%;
+	color: black;
+}
+
+.content-list ul {
+	list-style: square;
+}
+
+.content-list li {
+	font-family: HindRegular, sans-serif;
+	font-size: 18px;
+	margin: 15px 0;
+	margin-left: 17.5px;
 	width: 75%;
 	color: black;
 }
@@ -831,6 +836,19 @@ footer .copyright .copyright-statement {
 		width: calc(100% - 2 * 75px);
 		margin: 0 75px;
 	}
+
+	.content-container .content {
+		margin: 0 75px;
+		padding-top: 25px;
+	}
+
+	.content-header h1 {
+		font-size: 26px;
+	}
+
+	.content-text p {
+		font-size: 18px;
+	}
 }
 /*#endregion*/
 
@@ -1021,6 +1039,19 @@ footer .copyright .copyright-statement {
 		width: calc(100% - 2 * 15%);
 		margin: 0 15%;
 	}
+
+	.content-container .content {
+		margin: 0 15%;
+		padding-top: 35px;
+	}
+
+	.content-header h1 {
+		font-size: 26px;
+	}
+
+	.content-text p {
+		font-size: 18px;
+	}
 }
 /*#endregion*/
 
@@ -1087,6 +1118,19 @@ footer .copyright .copyright-statement {
 	footer .copyright {
 		width: calc(100% - 2 * 25%);
 		margin: 0 25%;
+	}
+
+	.content-container .content {
+		margin: 0 25%;
+		padding-top: 35px;
+	}
+
+	.content-header h1 {
+		font-size: 26px;
+	}
+
+	.content-text p {
+		font-size: 18px;
 	}
 }
 /*#endregion*/
