--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ header .logo-container h1 {
 /*#region Page Banner*/
 .page-banner {
 	width: 100%;
-	height: 375px;
+	height: 500px;
 	margin-top: 75px;
 	position: relative;
 }
@@ -251,10 +251,10 @@ header .logo-container h1 {
 	filter: brightness(75%);
 	margin: 0px;
 	padding: 0px;
-	transform: scale(1.1);
+	transform: scale(1);
 }
 
-.page-banner-content {
+.page-banner .page-banner-content {
 	text-align: center;
 	position: absolute;
 	width: 100%;
@@ -262,12 +262,11 @@ header .logo-container h1 {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	backdrop-filter: blur(2px);
 }
 
 .page-banner-content .small-text {
 	margin: 137.5px 0;
-	line-height: 50px;
+	line-height: 75px;
 }
 
 .page-banner-content .small-text h1 {
